--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-line-chart></app-line-chart>
-<app-bar-chart></app-bar-chart>
+<ngx-spinner>
+    <h3>Loading...</h3>
+</ngx-spinner>
+<app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
+<div>
+    <router-outlet></router-outlet>
+</div>
