--- a/client/src/app/shared/components/bar-chart/bar-chart.component.html
+++ b/client/src/app/shared/components/bar-chart/bar-chart.component.html
@@ -1,13 +1,15 @@
-<div>
-  <div>
-    <div style="display: block">
+
+<div class="container">
+  <div class="row">
+    <section class="col-1"></section>
+    <section class="col-10" style="display: block">
       <canvas baseChart
         [data]="barChartData"
         [options]="barChartOptions"
         [plugins]="barChartPlugins"
         [type]="barChartType">
       </canvas>
-    </div>
+    </section>
     <button mat-button mat-raised-button color="primary" (click)="randomize()">Update</button>
   </div>
 </div>
