--- a/client/src/app/shared/components/bar-chart/bar-chart.component.html
+++ b/client/src/app/shared/components/bar-chart/bar-chart.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <section class="col-1"></section>
     <section class="col-10" style="display: block">
@@ -10,6 +10,6 @@
         [type]="barChartType">
       </canvas>
     </section>
-    <button mat-button mat-raised-button color="primary" (click)="randomize()">Update</button>
+    <button class="btn btn-primary mb-5" (click)="randomize()">Update</button>
   </div>
 </div>
