--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="card-body d-flex flex-column">
-        <a routerLink="">
+        <a routerLink="/shop/{{product.id}}">
             <h6 class="text-uppercase">{{product.title}}</h6>
         </a>
         <span class="mb-2">{{product.originalPrice | currency}}</span>
