--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,19 +1,35 @@
 <div class="container mt-6">
     <div class="row">
-        <section class="col-3">                     
-            <accordion class="accordion" [closeOthers]="true">
-                <ng-container class="list-group-item" *ngFor="let productTypeLevel1 of productTypeList">
-                    <accordion-group heading="{{productTypeLevel1.name}}">
-                        <ng-container class="list-group-item" *ngFor="let productTypeLevel2 of productTypeLevel1.childType">
-                            <p (click)="onProductTypeSelected(productTypeLevel2.id)" style="cursor: pointer">{{productTypeLevel2.name}}</p>
-                        </ng-container>
-                    </accordion-group>
-                </ng-container>
-            </accordion>
+        <section class="col-3">
+            <ng-container *ngIf="productTypeList">
+                <h5 class="text-warning ml-3 mt-3 mb-4">排序條件</h5>
+                <!-- tsconfig.json → angularCompilerOptions → "strictDomEventTypes": false, -->
+                <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions" 
+                        [selected]="shopParams.sort === sort.value"
+                        [value]="sort.value">
+                        {{sort.name}}
+                    </option>
+                </select>                
+                <div class="d-flex justify-content-between align-items-center pb-2"> 
+                <accordion class="accordion" [closeOthers]="true">
+                    <button (click)="onAllProductClick()" class="btn btn-primary ml-4 mb-3 mt-3">全部商品</button> 
+                    <ng-container class="list-group-item" *ngFor="let productTypeLevel1 of productTypeList">
+                        <accordion-group heading="{{productTypeLevel1.name}}">
+                            <ng-container class="list-group-item" *ngFor="let productTypeLevel2 of productTypeLevel1.childType">
+                                <p (click)="onProductTypeSelected(productTypeLevel2.id)" style="cursor: pointer; text-align: center;">{{productTypeLevel2.name}}</p>
+                            </ng-container>
+                        </accordion-group>
+                    </ng-container>
+                </accordion>
+                </div>
+            </ng-container>
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <div (click)="onAllProductClick()" class="ml-4" style="cursor: pointer">全部商品</div>   
+                  
+                <app-paging-header [totalCount]="this.paginationParams.TotalCount" [pageIndex]="this.paginationParams.PageIndex"
+                [pageSize]="this.paginationParams.PageSize"></app-paging-header>
                 <div class="form-inline mt-2" *ngIf="products">
                     <input (keyup.enter)="onSearch()" type="text" class="form-control mr-2" #search placeholder="Search">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
@@ -22,21 +38,16 @@
             </div>
             <div class="row">
                 <div class="col-4 mb-4" *ngFor="let product of products">
-                    <app-product-item [product]="product"></app-product-item>            
+                    <app-product-item [product]="product"></app-product-item>
                 </div>
             </div>
-            <div class="d-flex justify-content-center">
-                <pagination 
-                    [boundaryLinks]="true" 
-                    (pageChanged)="onPagerChange($event)"
-                    [itemsPerPage]="this.paginationParams.PageSize"
-                    [totalItems]="this.paginationParams.TotalCount" 
-                    previousText="&lsaquo;" 
-                    nextText="&rsaquo;" 
-                    firstText="&laquo;" 
-                    lastText="&raquo;"
-                >
-                </pagination>
+            <h1 class="d-flex justify-content-center mt-5" *ngIf="this.paginationParams.TotalCount <= 0">{{error}}</h1>
+            <div class="d-flex justify-content-center" *ngIf="this.paginationParams.TotalCount > 0">
+                <app-pager 
+                [pageSize]="this.paginationParams.PageSize" 
+                [totalCount]="this.paginationParams.TotalCount"
+                [pageIndex]="this.paginationParams.PageIndex"
+                (pageChanged)="onPageChanged($event)"></app-pager>
             </div>
         </section>
     </div>
