--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -2,37 +2,39 @@
      p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
   <img src="/assets/images/logo.png" style="max-height: 50px;" alt="logo" class="logo" routerLink="/">
   <nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: larger;">
-    <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">Shop</a>
-    <a class="p-2" [routerLink]="['/chart']" routerLinkActive="active">Chart</a>
+    <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">首頁</a>
+    <!-- <a class="p-2" [routerLink]="['/aboutme']" routerLinkActive="active">關於我</a> -->
+    <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">線上商城</a>
+    <a class="p-2" [routerLink]="['/chart']" routerLinkActive="active">報表圖表</a>
+    <!-- <a class="p-2" [routerLink]="['/cms']" routerLinkActive="active">後台管理</a> -->
   </nav>
   <div class="d-flex align-items-center">
     <a routerLink='/basket' class="position-relative">
       <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-      <div class="cart-no">8</div>
+      <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
     </a>
-    <ng-container>
-      <a routerLink="/account/login" class="btn btn-outline-secondary mr-2" href="#">Login</a>
-      <a routerLink="/account/register" class="btn btn-outline-secondary mr-3" href="#">Sign up</a>
-    </ng-container>
-    <ng-container>
+    <ng-container *ngIf="(currentUser$ | async) as user">
       <div class="dropdown ml-3 mr-5" dropdown>
         <a class="dropdown-toggle" style="cursor: pointer;" dropdownToggle>
-          <strong>name</strong>
+          <strong>{{(currentUser$ | async)!.name}}</strong>
         </a>
         <div class="dropdown-menu dropdown-menu-right" style="cursor:pointer" *dropdownMenu>
           <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
-            <i class="fa fa-shopping-cart mr-3"></i> View Basket
+            <i class="fa fa-shopping-cart mr-3"></i>購物車
           </a>
           <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
-            <i class="fa fa-history mr-3"></i> View Orders
+            <i class="fa fa-history mr-3"></i> 訂單管理
           </a>
           <div class="dropdown-divider"></div>
           <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
-            <i class="fa fa-sign-out mr-3"></i> Logout
+            <i class="fa fa-sign-out mr-3"></i> 登出
           </a>
         </div>
       </div>
+    </ng-container>
+    <ng-container *ngIf="(currentUser$ | async)===null">
+      <a routerLink="/account/login" class="btn btn-outline-secondary mr-2" href="#">登入</a>
+      <a routerLink="/account/register" class="btn btn-outline-secondary mr-3" href="#">註冊</a>
     </ng-container>
   </div>
 </header>
