--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
     <div class="image position-relative" style="cursor: pointer">
         <img src="{{product.coverImageUrl}}" alt="{{product.title}}" class="img-fluid bg-info">
         <div class="d-flex align-items-center justify-content-center hover-overlay">
-            <button class="btn btn-primary fa fa-shopping-cart mr-1" (click)="addItemToBasket()" type="button"></button>
+            <button class="btn btn-primary fa fa-cart-plus mr-1" (click)="addItemToBasket()" type="button"></button>
             <button class="btn btn-primary" routerLink="/shop/{{product.id}}" type="button">查看</button>
         </div>
     </div>
@@ -10,6 +10,6 @@
         <a routerLink="/shop/{{product.id}}">
             <h6 class="text-uppercase">{{product.title}}</h6>
         </a>
-        <span class="mb-2">{{product.originalPrice | currency}}</span>
+        <span class="mb-2">{{product.originalPrice | currency: 'TWD':true:'1.0-0' }}</span>
     </div>
 </div>
