--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center mt-5">
     <div class="col-5">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <app-text-input formControlName="email" [label]="'Email address'"></app-text-input>
-            <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
+            <app-text-input formControlName="email" [label]="'信箱地址'"></app-text-input>
+            <app-text-input formControlName="password" [label]="'密碼'" [type]="'password'"></app-text-input>
             <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block mt-3 mb-5" type="submit">確認</button>
         </form>
     </div>
