--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -4,19 +4,19 @@
             <thead [class.thead-light]="isBasket || isOrder" class="border-0 py-2">
                 <tr>
                     <th scope="col" >
-                        <div class="p-2 px-3 text-uppercase">Product</div>
+                        <div class="p-2 px-3 text-uppercase">商品</div>
                     </th>
                     <th scope="col">
-                        <div class="py-2 text-uppercase">Price</div>
+                        <div class="py-2 text-uppercase">價格</div>
                     </th>
                     <th scope="col">
-                        <div class="py-2 text-uppercase">Quantity</div>
+                        <div class="py-2 text-uppercase">數量</div>
                     </th>
                     <th scope="col">
-                        <div class="py-2 text-uppercase">Total</div>
+                        <div class="py-2 text-uppercase">總價</div>
                     </th>
                     <th *ngIf="isBasket" scope="col" class="border-0">
-                        <div class="py-2 text-uppercase">Remove</div>
+                        <div class="py-2 text-uppercase"></div>
                     </th>
                 </tr>
             </thead>
@@ -24,12 +24,13 @@
                 <tr *ngFor="let item of items">
                     <th scope="row">
                         <div class="p-2">
-                            <img src="{{item.pictureUrl}}" alt="{{item.productName}}"
+                            <img src="{{item.coverImage}}" alt="{{item.productName}}"
                                 class="img-fluid" style="max-height: 50px;">
+
                             <div class="ml-3 d-inline-block align-middle">
                                 <h5 class="mb-0">
                                     <a routerLink="/shop/{{item.id}}"
-                                        class="text-dark">{{item.productName}}</a>
+                                        class="text-dark">{{item.productTitle}}</a>
                                 </h5>
                                 <span
                                     *ngIf="item.type"
