--- a/client/src/app/core/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/components/nav-bar/nav-bar.component.html
@@ -5,6 +5,7 @@
     <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">首頁</a>
     <a class="p-2" [routerLink]="['/aboutme']" routerLinkActive="active">關於我</a>
     <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">線上商城</a>
+    <a class="p-2" [routerLink]="['/product-management']" routerLinkActive="active">商品管理</a>
   </nav>
   <div class="d-flex align-items-center">
     <a routerLink='/basket' class="position-relative">
