--- a/client/src/app/shop/product-detail/product-detail.component.html
+++ b/client/src/app/shop/product-detail/product-detail.component.html
@@ -1,23 +1,21 @@
 <div class="container mt-5">
     <div class="row" *ngIf="product">
-        <div class="col-6">
-            <img src="{{product.coverImage}}" alt="{{product.title}}" class="img-fluid w-100">
+        <div class="col-1"></div>
+        <div class="col-5" style="min-height: 400px;">
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
+            <!-- <img src="{{product.coverImage}}" alt="{{product.title}}" class="img-fluid w-100"> -->
         </div>
-        <div class="col-6">
+        <div class="col-5">
             <h3>{{product.title}}</h3>
-            <p style="font-size: 2em;">{{product.originalPrice | currency}}</p>
+            <p style="font-size: 2em;">{{product.originalPrice | currency: 'TWD':true:'1.0-0'}}</p>
             <div class="d-flex justify-content-start align-items-center">
                 <i (click)="decrementQuantity()" class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size: 2em;"></i>
                 <span class="font-weight-bold" style="font-size: 1.5em;">{{quantity}}</span>
                 <i (click)="incrementQuantity()" class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
                 <button (click)="addItemToBasket()" class="btn btn-outline-primary btn-lg ml-4">加入購物車</button>
             </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-12 ml-3">
-                <h4>Description</h4>
-                <p>{{product.description}}</p>
-            </div>
+            <h4 class="mt-5 mb-2">商品描述</h4>
+            <p>{{product.description}}</p>
         </div>
     </div>
 </div>
