about-site update

--- a/client/src/app/core/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/components/nav-bar/nav-bar.component.html
@@ -3,7 +3,8 @@
   <img src="/assets/images/logo.png" style="max-height: 50px;" alt="logo" class="logo" routerLink="/">
   <nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: larger;">
     <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">首頁</a>
-    <a class="p-2" [routerLink]="['/aboutme']" routerLinkActive="active">關於我</a>
+    <a class="p-2" [routerLink]="['/about-me']" routerLinkActive="active">關於我</a>
+    <a class="p-2" [routerLink]="['/about-site']" routerLinkActive="active">關於網站</a>
     <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">線上商城</a>
     <a class="p-2" [routerLink]="['/product-management']" routerLinkActive="active">商品管理</a>
   </nav>
